--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 ---
-baseurl:                    http://tenchi2xh.github.io/
+baseurl:                    http://tenchi.team2xh.net/
 languageCode:               en
 title:                      COMMENT BLOCKS
 
